--- a/ApplicationContextManaging/ApplicationContextManaging.csproj
+++ b/ApplicationContextManaging/ApplicationContextManaging.csproj
@@ -89,7 +89,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -99,13 +101,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationContextManager.cs" />
-    <Compile Include="Contracts\IAcmControllerFactory.cs" />
-    <Compile Include="Contracts\IApplicationContextManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Web\DefaultAcmControllerFactory.cs" />
+    <Compile Include="Utils\ControllerFactoryExtensions.cs" />
+    <Compile Include="Web\AcmController.cs" />
+    <Compile Include="Web\AcmControllerFactory.cs" />
+    <Compile Include="Web\AcmActionInvoker.cs" />
+    <Compile Include="Web\AcmMethodDescriptor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj">
+      <Project>{8D67346E-E642-4239-9D6C-BBCCED964DE1}</Project>
+      <Name>Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
