--- a/Contracts/Contracts.csproj
+++ b/Contracts/Contracts.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1689342-A680-4385-8863-8003C593A177}</ProjectGuid>
+    <ProjectGuid>{8D67346E-E642-4239-9D6C-BBCCED964DE1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DummyStoryManager</RootNamespace>
-    <AssemblyName>DummyStoryManager</AssemblyName>
+    <RootNamespace>CodeFiction.Acm.Contracts</RootNamespace>
+    <AssemblyName>CodeFiction.Acm.Contracts</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,20 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Activities\Activity.cs" />
+    <Compile Include="ActivityExecutingContext.cs" />
+    <Compile Include="ApplicationContext.cs" />
+    <Compile Include="EventHandlers.cs" />
+    <Compile Include="IAcmControllerFactory.cs" />
+    <Compile Include="IActivityConfigure.cs" />
+    <Compile Include="IActivityExecute.cs" />
+    <Compile Include="IApplicationContextManager.cs" />
+    <Compile Include="IStoryConfiguration.cs" />
+    <Compile Include="IStoryItem.cs" />
+    <Compile Include="IStoryItemConfigure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Activities\RuleActivity.cs" />
-    <Compile Include="Activities\ServiceActivity.cs" />
-    <Compile Include="ReflectedParameterInfo.cs" />
-    <Compile Include="StoryItem.cs" />
+    <Compile Include="StoryResultWrapper.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Contracts\Contracts.csproj">
-      <Project>{8D67346E-E642-4239-9D6C-BBCCED964DE1}</Project>
-      <Name>Contracts</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
