--- a/DummyServices/DummyServices.csproj
+++ b/DummyServices/DummyServices.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E1689342-A680-4385-8863-8003C593A177}</ProjectGuid>
+    <ProjectGuid>{BD868807-7921-449A-A2A2-A09E643596C7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DummyStoryManager</RootNamespace>
-    <AssemblyName>DummyStoryManager</AssemblyName>
+    <RootNamespace>DummyServices</RootNamespace>
+    <AssemblyName>DummyServices</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -39,20 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Activities\Activity.cs" />
+    <Compile Include="FakeRepository.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Activities\RuleActivity.cs" />
-    <Compile Include="Activities\ServiceActivity.cs" />
-    <Compile Include="ReflectedParameterInfo.cs" />
-    <Compile Include="StoryItem.cs" />
+    <Compile Include="DummyStoryConfiguration.cs" />
+    <Compile Include="User.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Contracts\Contracts.csproj">
+    <ProjectReference Include="..\Contracts\Contracts.csproj">
       <Project>{8D67346E-E642-4239-9D6C-BBCCED964DE1}</Project>
       <Name>Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Sandbox\DummyStoryManager\DummyStoryManager.csproj">
+      <Project>{E1689342-A680-4385-8863-8003C593A177}</Project>
+      <Name>DummyStoryManager</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
